--- a/config/locales/js-en.yml
+++ b/config/locales/js-en.yml
@@ -49,6 +49,7 @@ en:
 
     card:
       add_new: 'Add new card'
+      remove_from_list: 'Remove card from list'
 
     clipboard:
       browser_error: "Your browser doesn't support copying to clipboard. Please copy the selected text manually."
